package headfirst.designpatterns.factory.pizzaaf;

interface Cheese {}
