package headfirst.designpatterns.factory.pizzaaf;

interface Clam {}
