package headfirst.designpatterns.factory.pizzaaf;

interface Dough {}
